--- a/Source/CharacterTable.tex
+++ b/Source/CharacterTable.tex
@@ -31,6 +31,6 @@
     \begin{equation*}
       \varepsilon\vartheta\varkappa\varpi\varrho\varsigma\varphi
     \end{equation*}
-    
-    \(FY\to M\)
+
+    \(FY\to M\)\(\geq \leq \times\)\(N\to\infty \neq\) \(\symbfup{CP}\)
 \end{document} 
